# join-pdfs

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/join_pdfs/: __init__.py  cli.py  models.py  processor.py
src/join_pdfs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_processor.py
